# argvparse

./: .gitignore  CMakeLists.txt  README.md
include/: argvparse.h
src/: arguments.cpp  arguments.h  main.cpp
